--- a/index.html
+++ b/index.html
@@ -917,8 +917,8 @@
                 updateUIForLoggedInUser();
             } else {
                 authButtons.innerHTML = `
-                    <button class="auth-btn btn-outline login-btn">${t.login}</button>
-                    <button class="auth-btn btn-primary register-btn">${t.register}</button>
+                    <button class="auth-btn btn-outline login-btn">login</button>
+                    <button class="auth-btn btn-primary register-btn">register</button>
                 `;
                 
                 document.querySelector('.login-btn').addEventListener('click', () => {
